# github_pr_stats

./: README.md  env.example  github_gql.ipynb  github_pr.ipynb  graphql.example  main.py  pyproject.toml  test.py
data/: github.db  github_gql.db
py_github/: py_github.py  py_github_copy.py
py_github/tests/utils/: test_url_utils.py
py_github/utils/: url_utils.py
